--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,13 +47,14 @@
 
                 <TextView
                     android:id="@+id/main_text"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:text="@string/main_text"
                     android:textColor="@color/main_text"
                     android:textSize="22dp"
                     android:textStyle="bold"
                     android:gravity="center"
+                    android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@id/main_section_2_icon"/>
 
         </RelativeLayout>
