--- a/app/src/main/res/layout/activity_delivery_report.xml
+++ b/app/src/main/res/layout/activity_delivery_report.xml
@@ -19,8 +19,8 @@
             <RelativeLayout
                 android:id="@+id/delivery_report_logo_section"
                 android:layout_width="match_parent"
-                android:padding="10dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="10dp">
 
                 <RelativeLayout
                     android:id="@+id/delivery_report_logo_section_part_1"
