--- a/app/src/main/res/layout/activity_report_image_upload.xml
+++ b/app/src/main/res/layout/activity_report_image_upload.xml
@@ -14,20 +14,20 @@
         android:padding="10dp">
 
         <RelativeLayout
-            android:id="@+id/delivery_report_logo_section_part_1"
+            android:id="@+id/report_image_upload_logo_section_part_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
 
             <ImageView
-                android:id="@+id/delivery_report_logo_section_part_1_icon"
+                android:id="@+id/report_image_upload_logo_section_part_1_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/as_cart_logo_icon"/>
 
             <TextView
-                android:id="@+id/delivery_report_logo_section_part_1_text"
+                android:id="@+id/report_image_upload_logo_section_part_1_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/project_name"
@@ -36,19 +36,19 @@
                 android:textStyle="bold"
                 android:gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/delivery_report_logo_section_part_1_icon"/>
+                android:layout_toRightOf="@id/report_image_upload_logo_section_part_1_icon"/>
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/delivery_report_logo_section_part_2"
+            android:id="@+id/report_image_upload_logo_section_part_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_below="@+id/delivery_report_logo_section_part_1">
+            android:layout_below="@+id/report_image_upload_logo_section_part_1">
 
             <ImageView
-                android:id="@+id/delivery_report_logo_section_part_2_icon"
+                android:id="@+id/report_image_upload_logo_section_part_2_icon"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
                 android:layout_centerHorizontal="true"
@@ -56,7 +56,7 @@
                 android:src="@drawable/van_icon"/>
 
             <TextView
-                android:id="@+id/delivery_report_logo_section_part_2_text"
+                android:id="@+id/report_image_upload_logo_section_part_2_text"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/main_text"
@@ -65,61 +65,134 @@
                 android:textStyle="bold"
                 android:gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/delivery_report_logo_section_part_2_icon"/>
+                android:layout_toRightOf="@id/report_image_upload_logo_section_part_2_icon"/>
 
         </RelativeLayout>
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/report_image_upload_selection_section"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/report_image_upload_logo_section">
 
-        <Button
-            android:id="@+id/report_image_upload_select_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="cameraBtnHandler"
-            android:text="Camera" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/report_image_upload_select_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="galleryBtnHandler"
-            android:text="Gallery"
-            android:layout_toRightOf="@+id/report_image_upload_select_camera"/>
+            <RelativeLayout
+                android:id="@+id/report_image_upload_user_img_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
 
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/report_image_upload_usr_img_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="@string/user_img_upload"
+                    android:textColor="@color/input_text_color"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:gravity="center"/>
 
-    <RelativeLayout
-        android:id="@+id/report_image_upload_view_section"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/report_image_upload_selection_section">
+                <RelativeLayout
+                    android:id="@+id/report_image_upload_image_btn_selection_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_below="@+id/report_image_upload_usr_img_text">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="galleryBtnHandler"
-            android:text="Gallery"/>
+                    <Button
+                        android:id="@+id/report_image_upload_select_camera"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="cameraBtnHandler"
+                        android:text="Open Camera"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:textAllCaps="false"
+                        android:background="@drawable/report_submit_button_background"/>
 
-    </RelativeLayout>
+                    <Button
+                        android:id="@+id/report_image_upload_select_gallery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="galleryBtnHandler"
+                        android:text="Gallery Image"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:textAllCaps="false"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@+id/report_image_upload_select_camera"
+                        android:background="@drawable/report_submit_button_background"/>
 
-    <RelativeLayout
-        android:id="@+id/report_image_upload_submit_section"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/report_image_upload_view_section">
+                </RelativeLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="galleryBtnHandler"
-            android:text="Gallery"/>
+                <RelativeLayout
+                    android:id="@+id/report_image_upload_view_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:gravity="center"
+                    android:background="@drawable/demo_img_background"
+                    android:layout_below="@+id/report_image_upload_image_btn_selection_section">
 
-    </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/report_image_upload_view_section_display_image"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:background="#00685353"
+                        app:srcCompat="@drawable/demo_img_background" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/report_image_upload_submit_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:layout_below="@+id/report_image_upload_view_section">
+
+                    <Button
+                        android:id="@+id/report_image_upload_submit_section_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="uploadImageToServer"
+                        android:text="Upload Image"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:textAllCaps="false"
+                        android:background="@drawable/report_submit_button_background"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/report_image_upload_sign_btn_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:layout_below="@+id/report_image_upload_submit_section">
+
+                    <Button
+                        android:id="@+id/report_image_upload_sign_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="goToSignatureHandler"
+                        android:text="Upload signature"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:textAllCaps="false"
+                        android:background="@drawable/report_submit_button_background"/>
+                </RelativeLayout>
+            </RelativeLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
