--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
 
     <color name="input_section_background">#dedede</color>
     <color name="input_text_color">#222</color>
+
+    <color name="ops">#FF0000</color>
+    <color name="visit">#087C00</color>
 </resources>
