--- a/app/src/main/res/layout/activity_signature_upload.xml
+++ b/app/src/main/res/layout/activity_signature_upload.xml
@@ -7,74 +7,16 @@
     tools:context=".SignatureUpload"
     android:background="@drawable/report_input_background">
 
-    <RelativeLayout
-        android:id="@+id/report_image_upload_logo_section"
+    <include
+        android:id="@+id/common_logo_section"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
-
-        <RelativeLayout
-            android:id="@+id/report_image_upload_logo_section_part_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/report_image_upload_logo_section_part_1_icon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/as_cart_logo_icon"/>
-
-            <TextView
-                android:id="@+id/report_image_upload_logo_section_part_1_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/project_name"
-                android:textColor="@color/main_text"
-                android:textSize="40dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/report_image_upload_logo_section_part_1_icon"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/report_image_upload_logo_section_part_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_below="@+id/report_image_upload_logo_section_part_1">
-
-            <ImageView
-                android:id="@+id/report_image_upload_logo_section_part_2_icon"
-                android:layout_width="30dp"
-                android:layout_height="20dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/van_icon"/>
-
-            <TextView
-                android:id="@+id/report_image_upload_logo_section_part_2_text"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="@string/main_text"
-                android:textColor="@color/main_text"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/report_image_upload_logo_section_part_2_icon"/>
-
-        </RelativeLayout>
-
-    </RelativeLayout>
+        android:layout_height="100dp"
+        layout="@layout/common_logo"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/report_image_upload_logo_section">
+        android:layout_below="@+id/common_logo_section">
 
         <LinearLayout
             android:layout_width="match_parent"
