--- a/app/src/main/res/drawable/black_purple.xml
+++ b/app/src/main/res/drawable/black_purple.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#86B6E1F3"
-        android:endColor="#D6EFFC"
+    <gradient android:startColor="@color/PASTE"
+        android:endColor="@color/colorPrimary"
         android:angle="270" />
     <corners android:radius="2dp" />
-    <stroke android:width="2px" android:color="#000000" />
+    <stroke android:width="6px" android:color="@color/AQUA" />
 </shape>
