--- a/app/src/main/res/layout/activity_signature_upload.xml
+++ b/app/src/main/res/layout/activity_signature_upload.xml
@@ -56,7 +56,7 @@
 
                         <Button
                             android:id="@+id/report_image_upload_select_camera_usr_sign"
-                            android:layout_width="wrap_content"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:onClick="cameraBtnHandlerForSignature"
                             android:text="Open Camera"
@@ -96,10 +96,10 @@
 
                         <Button
                             android:id="@+id/report_image_upload_usr_sign_submit"
-                            android:layout_width="wrap_content"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:onClick="uploadSignatureToServer"
-                            android:text="Upload Signature"
+                            android:text="Submit Report"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp"
                             android:textAllCaps="false"
