--- a/app/src/main/res/layout/activity_delivery_report.xml
+++ b/app/src/main/res/layout/activity_delivery_report.xml
@@ -39,37 +39,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_on_behalf_of_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_on_behalf_of_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_on_behalf_of_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_on_behalf_of_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_on_behalf_of_text"/>-->
-
                     <EditText
                         android:id="@+id/delivery_report_on_behalf_of_input"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
                         android:hint="@string/delivery_report_on_behalf_of_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color"
                         android:ems="10"
                         android:inputType="text"
-                        android:background="@drawable/bottom_border"/>
+                        android:background="@drawable/et_custom"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -79,37 +59,17 @@
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/delivery_report_on_behalf_of_section">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_order_number_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_order_number_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_order_number_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_order_number_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_order_number_text"/>-->
-
                     <EditText
                         android:id="@+id/delivery_report_order_number_input"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
                         android:hint="@string/delivery_report_order_number_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color"
                         android:ems="10"
                         android:inputType="text"
-                        android:background="@drawable/bottom_border"/>
+                        android:background="@drawable/et_custom"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -119,37 +79,17 @@
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/delivery_report_order_number_section">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_order_by_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_order_by_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_order_by_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_order_by_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_order_by_text"/>-->
-
                     <EditText
                         android:id="@+id/delivery_report_order_by_input"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
                         android:hint="@string/delivery_report_order_by_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color"
                         android:ems="10"
                         android:inputType="text"
-                        android:background="@drawable/bottom_border"/>
+                        android:background="@drawable/et_custom"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -157,37 +97,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:background="@drawable/et_custom"
                     android:layout_below="@+id/delivery_report_order_by_section">
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_order_date_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_order_date_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color_2"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
 
                     <TextView
                         android:id="@+id/delivery_report_order_date_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="6dp"
                         android:text="@string/delivery_report_order_date_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color_2"
                         android:drawablePadding="10dp"/>
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_order_date_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_order_date_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_order_date_text"/>-->
 
 
                     <DatePicker
@@ -204,37 +126,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:background="@drawable/et_custom"
                     android:layout_below="@+id/delivery_report_order_date_section">
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_delivery_date_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_delivery_date_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color_2"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
 
                     <TextView
                         android:id="@+id/delivery_report_delivery_date_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="6dp"
                         android:text="@string/delivery_report_delivery_date_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color_2"
                         android:drawablePadding="10dp"/>
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_delivery_date_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_delivery_date_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_delivery_date_text"/>-->
 
 
                     <DatePicker
@@ -253,37 +157,17 @@
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/delivery_report_delivery_date_section">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_delivered_to_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_delivery_to_name_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_delivered_to_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_delivery_to_name_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_delivered_to_text"/>-->
-
                     <EditText
                         android:id="@+id/delivery_report_delivered_to_input"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
                         android:hint="@string/delivery_report_delivery_to_name_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color"
                         android:ems="10"
                         android:inputType="text"
-                        android:background="@drawable/bottom_border"/>
+                        android:background="@drawable/et_custom"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -293,37 +177,17 @@
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/delivery_report_delivered_to_name_section">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/delivery_report_comment_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/delivery_report_comment_text"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:drawableRight="@drawable/required_icon"-->
-<!--                        android:drawablePadding="10dp"/>-->
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/delivery_report_comment_input"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:hint="@string/delivery_report_comment_input_hint"-->
-<!--                        android:textSize="18dp"-->
-<!--                        android:textColor="@color/input_text_color"-->
-<!--                        android:ems="10"-->
-<!--                        android:inputType="text"-->
-<!--                        android:layout_below="@+id/delivery_report_comment_text"/>-->
-
                     <EditText
                         android:id="@+id/delivery_report_comment_input"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
                         android:hint="@string/delivery_report_comment_text"
                         android:textSize="18dp"
                         android:textColor="@color/input_text_color"
                         android:ems="10"
                         android:inputType="text"
-                        android:background="@drawable/bottom_border"/>
+                        android:background="@drawable/et_custom"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -335,7 +199,7 @@
                     android:layout_below="@+id/delivery_report_comment_section">
 
                     <Button
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/delivery_report_submit_btn_text"
                         android:textColor="#025377"
