--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="AQUA">#00FFFF</color>
     <color name="PASTE">#0099FF</color>
     <color name="WHITE">#FFFFFF</color>
+
+    <color name="shasroy_color">#ff683f</color>
 </resources>
