--- a/app/src/main/res/drawable/report_submit_button_background.xml
+++ b/app/src/main/res/drawable/report_submit_button_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#868DDCFD"
-        android:endColor="#2AB5FD"
-        android:angle="270" />
+    <solid android:color="@color/shasroy_color"/>
     <corners android:radius="8dp" />
     <stroke android:width="2px" android:color="#86047BAE" />
 </shape>
