--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_background"
+    android:background="@color/shasroy_color"
     android:gravity="center"
     android:padding="10dp"
     tools:context=".MainActivity">
@@ -16,46 +16,10 @@
 
                 <ImageView
                     android:id="@+id/main_logo_icon"
-                    android:layout_width="150dp"
-                    android:layout_height="80dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/as_cart_logo_icon"/>
-
-                <ImageView
-                    android:id="@+id/main_logo_text"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/as_cart_logo_text"
-                    android:layout_below="@id/main_logo_icon"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/main_section_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_below="@+id/main_section_1">
-
-                <ImageView
-                    android:id="@+id/main_section_2_icon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/van_icon"/>
-
-                <TextView
-                    android:id="@+id/main_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:text="@string/main_text"
-                    android:textColor="@color/main_text"
-                    android:textSize="22dp"
-                    android:textStyle="bold"
-                    android:gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_toRightOf="@id/main_section_2_icon"/>
+                    android:src="@drawable/delivery_logo"/>
 
         </RelativeLayout>
 
