--- a/app/src/main/res/layout/activity_non_delivery_man.xml
+++ b/app/src/main/res/layout/activity_non_delivery_man.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NonDeliveryMan"
-    android:background="@drawable/report_input_background">
+    tools:context=".NonDeliveryMan">
 
     <include
         android:id="@+id/common_logo_section"
@@ -21,63 +20,22 @@
         android:layout_below="@+id/common_logo_section">
 
         <RelativeLayout
-            android:id="@+id/non_delivery_man_suggestion_text_section"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/non_delivery_man_suggestion_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/ops"
-                android:textColor="@color/ops"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
             android:id="@+id/non_delivery_man_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_below="@+id/non_delivery_man_suggestion_text_section">
+            android:gravity="center">
 
             <Button
                 android:id="@+id/non_delivery_man_login_brn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="loginBtnHandler"
+                android:textColor="@color/WHITE"
+                android:textStyle="bold"
+                android:textSize="18dp"
                 android:text="Sign in"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:textAllCaps="false"
-                android:background="@drawable/report_submit_button_background"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/non_delivery_man_suggestion_url_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_below="@+id/non_delivery_man_login">
-
-            <Button
-                android:id="@+id/non_delivery_man_become_leader_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="shasroyLeaderHandler"
-                android:text="Become a Shasroy Leader"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:layout_marginLeft="15dp"
@@ -93,14 +51,17 @@
             android:padding="10dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:layout_below="@+id/non_delivery_man_suggestion_url_1">
+            android:layout_below="@+id/non_delivery_man_login">
 
             <Button
                 android:id="@+id/non_delivery_man_delivery_man_application_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="deliveryManHandler"
-                android:text="Apply for Delivery Man"
+                android:textColor="@color/WHITE"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:text="Become a Delivery partner"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:layout_marginLeft="15dp"
@@ -115,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/visit_website"
-        android:textColor="@color/visit"
+        android:textColor="@color/shasroy_color"
         android:textSize="18dp"
         android:textStyle="bold"
         android:gravity="center"
