color, sign in layout added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="input_section_background">#dedede</color>
     <color name="input_text_color">#222</color>
     <color name="input_text_color_2">#787878</color>
+    <color name="input_text_hint_color">#787878</color>
 
     <color name="ops">#FF0000</color>
     <color name="visit">#087C00</color>
