--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -44,6 +44,7 @@
                 android:padding="15dp"
                 android:textColor="@color/BLACK"
                 android:inputType="textEmailAddress"
+                android:textColorHint="@color/input_text_hint_color"
                 android:background="@drawable/et_custom"
                 android:textSize="15dp" />
 
@@ -57,6 +58,7 @@
                 android:padding="15dp"
                 android:textColor="@color/BLACK"
                 android:inputType="textPassword"
+                android:textColorHint="@color/input_text_hint_color"
                 android:layout_centerInParent="true"
                 android:background="@drawable/et_custom"
                 android:textSize="15dp" />
@@ -70,7 +72,8 @@
                 android:layout_marginTop="15dp"
                 android:textColor="@android:color/white"
                 android:text="Sign in"
-                android:textSize="18dp"/>
+                android:textSize="18dp"
+                android:onClick="signInClickHandler"/>
         </RelativeLayout>
     </RelativeLayout>
 
